Fix non-centered list on small screens

--- a/src/app/modules/printers/components/printers/printers.component.scss
+++ b/src/app/modules/printers/components/printers/printers.component.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, max-content));
   grid-gap: 1rem;
-  justify-content: space-between;
+  justify-content: space-around;
 
   .grid-header {
     grid-row: 1;
